k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
  namespace: paperclip
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3100
      protocol: TCP
      name: http
  selector:
    app: paperclip
